improve layout of address rule inputs, avoid focus border overlaps

--- a/skins/elastic/sauserprefs.less
+++ b/skins/elastic/sauserprefs.less
@@ -268,6 +268,31 @@ span.helpicon::after {
 
 div.address-input {
   margin-bottom: @grid-gutter-height;
+
+  > input,
+  > select {
+    width: auto !important;
+  }
+
+  > #rcmfd_spamaddress {
+    flex-grow: 1;
+    margin: 0 5px;
+    width: 100px !important;
+  }
+
+  html.layout-small &,
+  html.layout-phone & {
+    // stack the input-group on small screens and fix the borders
+    > input,
+    > select {
+      width: 100% !important;
+    }
+
+    > #rcmfd_spamaddress {
+      margin: 5px 0;
+      width: 100% !important;
+    }
+  }
 }
 
 // Bootstrap 4.0.0 does not expect form-control elements in input-group-prepend but it makes layout easier so fix the border
@@ -294,37 +319,6 @@ html.touch {
 }
 
 html.layout-phone {
-  // stack the input-group on small screens and fix the borders
-  .address-input.input-group {
-    display: block;
-
-    input {
-      width: 100%;
-    }
-
-    .input-group-prepend:first-child {
-      margin-right: 0;
-      margin-bottom: -1px;
-
-      > :first-child {
-        border-radius: 0;
-        border-top-left-radius: 0.25em;
-        border-top-right-radius: 0.25em;
-      }
-    }
-
-    .input-group-append:last-child {
-      margin-left: 0;
-      margin-top: -1px;
-
-      > :last-child {
-        border-radius: 0;
-        border-bottom-left-radius: 0.25em;
-        border-bottom-right-radius: 0.25em;
-      }
-    }
-  }
-
   table.address-rules-table > thead > tr > th.rule,
   table.address-rules-table > tbody > tr > td.rule {
     display: none;
